{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 188,
  "lineage": "d78fea65-e6a1-5270-1e3a-4ad3ea21df18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c07a0c91b9d3a9a",
            "domain": "vpc",
            "id": "eipalloc-09c07a0c91b9d3a9a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-116-249-250.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.249.250",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "backend_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:920048411410:loadbalancer/backend-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-elb-1175280264.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "backend-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "backend-elb",
            "security_groups": [
              "sg-08c76502626243cf4"
            ],
            "source_security_group": "920048411410/elb_backend",
            "source_security_group_id": "sg-08c76502626243cf4",
            "subnets": [
              "subnet-01ab9cc274d897d8a",
              "subnet-0d3056892f09be1e0"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.private_us_east_2a",
            "aws_subnet.private_us_east_2b",
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:920048411410:loadbalancer/web-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-1965917812.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-0cc75339a52b335e9"
            ],
            "source_security_group": "920048411410/elb_presentation",
            "source_security_group_id": "sg-0cc75339a52b335e9",
            "subnets": [
              "subnet-0e7753c3b5b27dc2b",
              "subnet-0fc678bd2eb794332"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb_http",
            "aws_subnet.public_us_east_2a",
            "aws_subnet.public_us_east_2b",
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:internet-gateway/igw-0d1c28be44475d728",
            "id": "igw-0d1c28be44475d728",
            "owner_id": "920048411410",
            "tags": {
              "Name": "My VPC - Internet Gateway"
            },
            "tags_all": {
              "Name": "My VPC - Internet Gateway"
            },
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c07a0c91b9d3a9a",
            "connectivity_type": "public",
            "id": "nat-0232afce95d6cfe6b",
            "network_interface_id": "eni-0606a3398a9e77d0e",
            "private_ip": "10.10.0.210",
            "public_ip": "18.116.249.250",
            "subnet_id": "subnet-0e7753c3b5b27dc2b",
            "tags": {
              "Name": "3-tier-nat"
            },
            "tags_all": {
              "Name": "3-tier-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_us_east_2a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:route-table/rtb-0f5902aa91b046009",
            "id": "rtb-0f5902aa91b046009",
            "owner_id": "920048411410",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0232afce95d6cfe6b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private Subnets Rt for My VPC"
            },
            "tags_all": {
              "Name": "private Subnets Rt for My VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_us_east_2a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:route-table/rtb-07430a1ead3ce11bc",
            "id": "rtb-07430a1ead3ce11bc",
            "owner_id": "920048411410",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1c28be44475d728",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "tags_all": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_2a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c45821981eb4bf4f",
            "route_table_id": "rtb-0f5902aa91b046009",
            "subnet_id": "subnet-0d3056892f09be1e0"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.my_vpc_private",
            "aws_subnet.private_us_east_2a",
            "aws_subnet.public_us_east_2a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_2a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d8a20a68a181d6f",
            "route_table_id": "rtb-07430a1ead3ce11bc",
            "subnet_id": "subnet-0e7753c3b5b27dc2b"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.public_us_east_2a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_2b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0233f2721ff09cc46",
            "route_table_id": "rtb-07430a1ead3ce11bc",
            "subnet_id": "subnet-01ab9cc274d897d8a"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.private_us_east_2b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_2b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f795711ea5fa2aa",
            "route_table_id": "rtb-07430a1ead3ce11bc",
            "subnet_id": "subnet-0fc678bd2eb794332"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.public_us_east_2b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:security-group/sg-06e3333f0c313505b",
            "description": "Allow HTTP \u0026 ssh p",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e3333f0c313505b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG presentation",
            "name_prefix": "",
            "owner_id": "920048411410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2 presenataion Security Group"
            },
            "tags_all": {
              "Name": "ec2 presenataion Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:security-group/sg-08c76502626243cf4",
            "description": "backend-tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c76502626243cf4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/21"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_backend",
            "name_prefix": "",
            "owner_id": "920048411410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend Security Group"
            },
            "tags_all": {
              "Name": "backend Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:security-group/sg-0521218e2c8c94a67",
            "description": "Allow HTTP backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0521218e2c8c94a67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG backend",
            "name_prefix": "",
            "owner_id": "920048411410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2 backend Security Group"
            },
            "tags_all": {
              "Name": "ec2 backend Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:security-group/sg-0cc75339a52b335e9",
            "description": "Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc75339a52b335e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "elb_presentation",
            "name_prefix": "",
            "owner_id": "920048411410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow All Traffic Security Group"
            },
            "tags_all": {
              "Name": "Allow All Traffic Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_us_east_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:subnet/subnet-0d3056892f09be1e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.4.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3056892f09be1e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920048411410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private us-east-2a"
            },
            "tags_all": {
              "Name": "Private us-east-2a"
            },
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_us_east_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:subnet/subnet-01ab9cc274d897d8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.6.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ab9cc274d897d8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920048411410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private us-east-2b"
            },
            "tags_all": {
              "Name": "Private us-east-2b"
            },
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:subnet/subnet-0e7753c3b5b27dc2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7753c3b5b27dc2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920048411410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet us-east-2a"
            },
            "tags_all": {
              "Name": "Public Subnet us-east-2a"
            },
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:subnet/subnet-0fc678bd2eb794332",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc678bd2eb794332",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920048411410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet us-east-2b"
            },
            "tags_all": {
              "Name": "Public Subnet us-east-2b"
            },
            "vpc_id": "vpc-0eb001dea9c980e72"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920048411410:vpc/vpc-0eb001dea9c980e72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/21",
            "default_network_acl_id": "acl-002f16b4963748ea2",
            "default_route_table_id": "rtb-03e1795412cac452e",
            "default_security_group_id": "sg-064ee812bf48617c7",
            "dhcp_options_id": "dopt-8f824ee4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eb001dea9c980e72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e1795412cac452e",
            "owner_id": "920048411410",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}